Abstratct class,multiple inheritance, decorator

--- a/Screening_Assignment.ipynb
+++ b/Screening_Assignment.ipynb
@@ -2,26 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71cf4617",
+   "id": "dc42c852",
    "metadata": {},
    "source": [
     "Abstract Class"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2525543f",
+   "cell_type": "markdown",
+   "id": "2a3c2afc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95961978",
    "metadata": {},
    "source": [
-    "An abstract class can be considered as a blueprint for other classes. It can not be instantiated(coverting to object) but we can create other classes that are inherited from abstract class. \n",
-    "Abstraction helps to reduce the complexity of the code.\n",
-    "By using abstract class we can HIDE unnecessary methods and properties which are not required in a particular class. See below example:\n"
+    "An abstract class can be considered as a blueprint for other classes. It can not be instantiated(coverting to object) but we can create other classes that are inherited from abstract class. Abstraction helps to reduce the complexity of the code. By using abstract class we can HIDE unnecessary methods and properties which are not required in a particular class. See below example:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "80f474d7",
+   "id": "de4e3797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "530f5868",
+   "id": "557b7f5a",
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3468ce3c",
+   "id": "405fae10",
    "metadata": {},
    "source": [
     "e.g. land_vehicle class derived from abstract vehicle class, so it will have all the abstract methods and abstract properties from vehicle class. land_vehicle class will also have some special methods related to land vehicle. But the properties and methods of marine_vehicle class and air_vehicle class will be Hidden for objects of land vehicle. "
@@ -121,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "4d43c3a1",
+   "id": "9c8c0733",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "589e6cdb",
+   "id": "9ac91c44",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b352b01",
+   "id": "841dc44d",
    "metadata": {},
    "source": [
     "Multiple Inheritance"
@@ -178,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149aaa3f",
+   "id": "ae185a66",
    "metadata": {},
    "source": [
     "With Inheritance, we can use the properties and methods of an already existing class in a new class. Inheritance allows code reusability.The existing class is the parent or superclass while the new class is the child or subclass.\n",
@@ -188,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "189b9206",
+   "id": "5d152df2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "8a679d83",
+   "id": "2a829f80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "62b11640",
+   "id": "770cf808",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a47c1766",
+   "id": "7fc592c0",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f8016a6",
+   "id": "7362f36e",
    "metadata": {},
    "source": [
     "Decorators"
@@ -278,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12273684",
+   "id": "0e252e94",
    "metadata": {},
    "source": [
     "Decorators are used to change the behaviour of a function or a class without permanently modifying the function or class. \n",
@@ -288,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "ba3bc7e8",
+   "id": "7f9953eb",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aec85d4",
+   "id": "8880311a",
    "metadata": {},
    "source": [
     "Suppose, in a particular program we want make a new funtion to display the sum as well as elements in the list. We can do this without modifying the funtion using decorator as follows."
@@ -318,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "6fdf1e51",
+   "id": "6de159f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "6020cbcb",
+   "id": "d60573a2",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c44c9f0",
+   "id": "ca4f1d5b",
    "metadata": {},
    "outputs": [],
    "source": []
